[package]
name = "merkleee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
console = "0.15.1"
csv = "1.1.6"
ethers = "0.17.0"
indicatif = "0.17.0"
rs_merkle = "1.2.0"
